# test-dependabot-no-devs

./: .coderabbit.yaml  README.md  attractors.go  circles.go  claude.js  code.py  color-type-B.ml  config.py  cordic_fp_log.c  cordic_sin_cos.c  gen_doc.py  hello.asm  index-benchmark-1.py  kernels.c  loop.asm  opt.c  ppm.c  print-char-call.asm  pyproject.toml  render_image_1.c  renderer.c  renderer_v8.c3  requests.py  requirements.txt  responses.py  rhoai_3_4.txt  s2.c  svitava.c  svitava_.c  test.c  test.c3  test_app_database.py  test_schema_dumper.py  test_token_estimator.py  test_tool_formatter.py  tga.c  tool_formatter.py  vga_320x200_putpixel_1.asm  vulnerability_report.py
.github/: dependabot.yml
.github/workflows/: markdown_lint.yaml  outdated-packages.yaml  test.yaml
HW03/: .gitignore  REASONING.md  go.mod  go.sum
SSH-like-Certificate-Authority-Service/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
SSH-like-Certificate-Authority-Service/integration/: google_sso_test.go  signer_test.go
SSH-like-Certificate-Authority-Service/secrets/: .env.example
attractors/: Bedhead.go  DeJong.go  go.mod
authentication/: test_api_key_token.py  test_jwk_token.py  test_k8s.py  test_noop_with_token.py  test_rh_identity.py
cache/: cache_factory.py  sqlite_cache.py
deepimage/: deepimage.go  iimage.go  ipixel.go  rpixel.go
doc/: assembly.md
docs/: a2a_protocol.md  deployment_guide.md
docs/image_coverage_1/: coverage.functions.html  coverage.html  coverage.image.c.d123596e2444218a2eaee66620c4571c.html  coverage.test.c.d02a618fa88f46a768e6df00dddaad2a.html
docs/image_coverage_2/: coverage.functions.html  coverage.html  coverage.image.c.d123596e2444218a2eaee66620c4571c.html
docs/image_coverage_3/: index-sort-f.html  index-sort-l.html  index.html
e2e/: .pdm-python
e2e/features/: environment.py
e2e/utils/: utils.py
endpoints/: authorized.py  config.py  conversations.py  feedback.py  health.py  info.py  metrics.py  models.py  query.py  root.py  streaming_query.py
go/: mandelbrot_basic.go  mandelbrot_basic_png.go  mandelbrot_buffered.go  mandelbrot_parallel.go  npr_lines.go  parallel_mandelbrot_renderer.go
go-hw03/: .golangci.yaml  REASONING.md  go.mod  go.sum
go-hw03/internal/: handlers.go  models.go  recommendation.go  storage.go
hw03/: .gitignore  README.md  REASONING.md  go.mod  go.sum
hw03/tests/: createReview_test.go  deleteReview_test.go  recommendToContent_test.go  recommendToUser_test.go  testdata_test.go  utils_test.go
hw03_03/: REASONING.md  load_data.sh
hw03_11/: Makefile  REASONING.md  config.yaml  go.mod  go.sum
hw03_11/assets/: reelgoofy.drawio
hw03_11/docs/: openapi.yaml
hw03_14/: REASONING.md  go.mod  go.sum
hw03_14/internal/: server.go  server_test.go
hw03_15/: REASONING.md  go.mod  go.sum
hw03_15/docs/: oapi-codegen.yaml  openapi.yaml
hw03_16/: Makefile  REASONING.md  go.mod  go.sum
hw03_17/: REASONING.md  go.mod  go.sum
hw03_18/: README.md  REASONING.md  go.mod
hw12/: REASONING.md  go.mod
hw12/internal/: README.md
hw_03_13/: Makefile  REASONING.md  go.mod  go.sum
hw_10/: .golangci.yaml  REASONING.md  go.mod  go.sum
integration/: conftest.py  test_configuration.py  test_openapi_json.py  test_rh_identity_integration.py  test_version.py
integration-tests/: test_configuration.py  test_openapi_json.py
integration-tests/endpoints/: README.md  test_config_integration.py  test_model_list.py  test_query_v2_integration.py  test_rlsapi_v1_integration.py  test_root_endpoint.py
integration/endpoints/: test_config_integration.py  test_health_integration.py  test_info_integration.py  test_query_v2_integration.py
lightspeed_stack_providers/: README.md  __init__.py
lightspeed_stack_providers/providers/: README.md  __init__.py
lightspeed_stack_providers/providers/remote/solr_vector_io/solr_vector_io/: .gitignore  README.md  conftest.py  pyproject.toml  tests.py
lightspeed_stack_providers/providers/remote/solr_vector_io/solr_vector_io/src/: README.md
lightspeed_stack_providers/providers/remote/solr_vector_io/solr_vector_io/src/solr_vector_io/: README.md  __init__.py  config.py  get_adapter_impl  solr.py
models/: info.py  models.feature  models.py  test_list.txt
models/config/: test_authentication_configuration.py  test_byok_rag.py  test_conversation_history.py  test_customization.py  test_database_configuration.py  test_dump_configuration.py  test_inference_configuration.py  test_jwt_role_rule.py  test_llama_stack_configuration.py  test_model_context_protocol_server.py  test_postgresql_database_configuration.py  test_quota_limiter_config.py  test_splunk_configuration.py  test_tls_configuration.py  test_user_data_collection.py
models/requests/: test_attachment.py  test_feedback_request.py  test_query_request.py
models/responses/: test_error_responses.py  test_query_response.py  test_rag_chunk.py  test_successful_responses.py  test_types.py
models/rlsapi/: test_requests.py  test_responses.py
pb173_hw03/: .golangci.yaml  REASONING.md  go.mod  go.sum
pb173_hw03/docs/: openapi.yaml  (+1 more)
providers/: README.md  __init__.py
quota/: configuration.py  token_usage_history.py
reelgoofy/: REASONING.md  go.mod
renderer/: colorizer.go  compositor.go  renderer.go
rocnikovka/: App.xaml.cs  MainWindow.xaml.cs  MazeGenerator.cs
scripts/: gen_doc.py  generate_openapi_schema.py  llama_stack_tutorial.sh  query_llm.py
server/: query_params.go  server.go
src/: client.py  configuration.py  lightspeed_stack.py  llama_stack_configuration.py  log.py
svitava-go/: .gitignore  CONTRIBUTING.md  Makefile  README.md  config.toml  go.mod  svitava.go
testsx/: schema_dumper.py  test_schema_dumper.py
unit/: README.md  conftest.py  test_configuration_unknown_fields.py
unit2/: conftest.py  test_configuration.py  test_lightspeed_stack.py  test_log.py
utils/: checks.py  common.py  connection_decorator.py  endpoints.py  llama_stack_version.py  mcp_headers.py  quota.py  responses.py  schema_dumper.py  shields.py  suid.py  token_counter.py  tool_formatter.py  transcripts.py  types.py
(+607 files in other folders)
