[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "A", "C4", "T10", "PGH", "FURB", "PERF", "AIR", "NPY", "FLY"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = []

target-version = "py311"
lint.pydocstyle.convention = "google"
line-length = 100

[tool.coverage.report]
# unit tests fails if the total coverage measurement is under this threshold value
fail_under = 90

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
skips = []
exclude_dirs = ["tests", "scripts"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
]

# The following section is needed only for torch[cpu] variant on Linux,
# because this variant need to be downloaded from external link, not from
# standard Python package index:
#
# [[tool.pdm.source]]
# type = "find_links"
# url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
# name = "torch"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ols"
version = "0.2.1"
description = "OpenShift Lightspeed is an AI powered assistant that runs on OpenShift and provides answers to product questions using backend LLM services."
authors = []
dependencies = [
    "pdm==2.21.0",
    "torch==2.5.1",
    "pandas==2.2.3",
    "fastapi==0.115.5",
    "langchain==0.3.12",
    "langchain-ibm==0.3.4",
    "llama-index==0.12.2",
    "llama-index-vector-stores-faiss==0.3.0",
    "llama-index-embeddings-huggingface==0.4.0",
    "uvicorn==0.32.1",
    "redis==5.2.0",
    "faiss-cpu==1.9.0.post1",
    "sentence-transformers==3.3.1",
    "openai==1.57.4",
    "ibm-generative-ai==3.0.0",
    "ibm-cos-sdk==2.13.6",
    "langchain-openai==0.2.9",
    "pydantic==2.10.1",
    "setuptools==75.6.0",
    "prometheus-client==0.21.1",
    "kubernetes==31.0.0",
    "psycopg2-binary==2.9.10",
    "azure-identity==1.19.0",
    "langchain-community==0.3.12",
    "SQLAlchemy==2.0.36",
    "huggingface_hub==0.26.2",
    "ibm-watsonx-ai==1.1.24",
    "certifi==2024.8.30",
    "cryptography==43.0.3",
    "urllib3==2.2.3",
    "nltk==3.9.1",
    "aiohttp==3.11.7",
    "zipp==3.21.0",
    "jinja2==3.1.4",
    "scikit-learn==1.5.2",
    "starlette==0.41.3",
    "tqdm==4.67.1",
    "gradio==5.9.0",
    "black==24.10.0",
    "fastparquet==2024.11.0",  # Required for model evaluation (runtime, if parquet qna file is used)
    "httpx==0.27.2",
    "mypy==1.13.0",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest_asyncio==0.24.0",
    "pydantic==2.10.1",
    "rouge-score==0.1.2",  # Required for model evaluation
    "ruff==0.8.3",
    "bandit==1.7.10",
    "types-requests==2.32.0.20241016",
    "gradio==5.9.0",
    "boto3==1.35.70",
    "reportportal-client==5.5.9",
    "pytest-reportportal==5.4.5",
    "pytest-benchmark==5.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {file = "LICENSE"}

[tool.pdm.scripts]
start = "pdm run make run"
test = "pdm run make test"
test-unit = "pdm run make test-unit"
test-integration = "pdm run make test-integration"
test-e2e = "pdm run make test-e2e"
coverage-report = "pdm run make coverage-report"
unit-tests-coverage-report = "pdm run make unit-tests-coverage-report"
integration-tests-coverage-report = "pdm run make integration-tests-coverage-report"
check-types = "pdm run make check-types"
generate-schema = "pdm run make schema"
security-check = "pdm run make security-check"
benchmarks = "pdm run make benchmarks"

[tool.setuptools]
packages = ["ols"]

[tool.pylint."MESSAGES CONTROL"]
good-names = ["e"]
